--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=4APBUee9jQBs8U0ye6RKMWDfs2qoKxuP
 APP_URL=http://localhost
 
 DB_HOST=127.0.0.1
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=blog
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
