--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=4APBUee9jQBs8U0ye6RKMWDfs2qoKxuP
 APP_URL=http://localhost
+APP_LOG=errorlog
 
 DB_HOST=ec2-107-21-101-67.compute-1.amazonaws.com
 DB_DATABASE=d24n9rjv66i2g5
